fixed minor bug, image off center

--- a/assets/style.css
+++ b/assets/style.css
@@ -59,9 +59,7 @@ main{
 #nasa-img {
     width: 100%;
     height: 100%;
-    position: relative;
-    top: -10px;
-    left: -10px; 
+
 }
 
 #next-img-button, #next-quote-button  {
